updated .gitignore and package.json

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ dist/*
 ### IF YOU ARE MAKING A PROJECT, YOU MAY WANT TO UNCOMMENT THIS LINE ###
 # !dist/assets/
 
+# Firebase
+firebase-debug.log
