--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Joe Weaver",
+  "author": "Tian Brown, Brant Eckert, and Zhen Yi Pan",
   "license": "ISC",
   "devDependencies": {
     "browserify": "^16.5.1",
     "fancy-log": "^1.3.3",
+    "firebase-tools": "^9.8.0",
     "gulp": "^4.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "tsify": "^5.0.0",
