--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,11 @@ dist/*
 # Include the built-in asset folder
 !dist/builtin/
 
-# Include the hw1 assets
-!dist/hw4_assets/
+# Include the assets
+!dist/assets/
 
 ### IF YOU ARE MAKING A PROJECT, YOU MAY WANT TO UNCOMMENT THIS LINE ###
 # !dist/assets/
 
-# Firebase
+# Exclude the firebase debug log
 firebase-debug.log
